--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoToSlim">
         <activity
+            android:name=".Suivi"
+            android:exported="false" />
+        <activity
+            android:name=".Succes"
+            android:exported="false" />
+        <activity
+            android:name=".StatEtPoids"
+            android:exported="false" />
+        <activity
+            android:name=".Conseils"
+            android:exported="false" />
+        <activity
+            android:name=".RecherchePlat"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
