--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.polytech.gotoslim" >
+    package="edu.polytech.gotoslim">
 
     <application
         android:allowBackup="true"
+        android:name=".NotificationChannelGTS"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GoToSlim" >
+        android:theme="@style/Theme.GoToSlim">
+        <activity
+            android:name=".ajoutplat.AjoutPlat"
+            android:exported="false" />
         <activity
             android:name=".Parametres"
             android:exported="false" />
@@ -23,16 +27,16 @@
             android:exported="false" />
         <activity
             android:name=".conseil.boisson.BoissonListActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".conseil.boisson.BoissonActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".conseil.plat.PlatListActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".conseil.plat.PlatActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".conseil.ConseilsActivity"
             android:exported="false" />
@@ -41,7 +45,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
