--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="edu.polytech.gotoslim">
 
     <application
-        android:allowBackup="true"
         android:name=".NotificationChannelGTS"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoToSlim">
+        <activity
+            android:name=".ParametresActivityBlack"
+            android:exported="false" />
         <activity
             android:name=".ajoutplat.AjoutPlat"
             android:exported="false" />
