--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".Suivi"
             android:exported="false" />
         <activity
-            android:name=".Succes"
+            android:name=".succes.Succes"
             android:exported="false" />
         <activity
             android:name=".statetpoid.StatEtPoids"
@@ -46,6 +46,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
