--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,18 +31,16 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-
     implementation 'com.google.android.material:material:1.5.0-alpha02'
-
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-<<<<<<< HEAD
     implementation 'com.google.firebase:firebase-database:19.2.1'
-=======
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
->>>>>>> 9eddb71410d1f33089239557521460a4df1aab32
+    implementation 'com.jjoe64:graphview:4.2.2'
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
